fix: Header Image too Big

--- a/src/components/Header/h.module.css
+++ b/src/components/Header/h.module.css
@@ -7,7 +7,7 @@
 
 .logoContainer {
     margin-left: 40px;
-    margin-right: 30px;
+    margin-right: 10px;
 }
 
 .hText {
